css/style.css
/* Import fonts */
@import url('https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Zen+Tokyo+Zoo&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

html{

    background-image: linear-gradient(to right, rgb(4, 39, 92) , rgb(93, 94, 107));
    background-size: cover;
    display: flex;
    justify-content: center;
}

body.noScroll{
    position: fixed;
}

h1, .soundMasterContainer, .soundContainer{
    display: flex;
    flex-wrap: wrap;
    justify-self: center;
    justify-content: center;
}

.headerContainer{
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-top: -20px;
}

.headerSmall{
    color: white;
    font-size: 22px;
    margin-bottom: -40px;
    font-family: "Pinyon Script", cursive;
    font-weight: 400;
    font-style: normal;
}
.headerLarge{
    color: rgb(231, 153, 9);
    font-family: "Zen Tokyo Zoo", system-ui;
    font-weight: 400;
    font-style: normal;
    font-size: 60px;
    margin-bottom: 10px;
}

img{
    width: 30%;
    height: auto;
}

.volumeSlider{
    margin: 15px;
    width: 75%;
}

p{
    font-family: "Roboto", sans-serif;
    font-weight: 500;
    font-style: normal;
    margin-top: -10px;
}

.soundMasterContainer{
    width: 80%;
    border: solid;
    border-color: rgb(246, 240, 240, 0.75);
    border-radius: 75px;
    align-items: center;
    flex-wrap: wrap;
    justify-content: space-around;
    background-color: rgb(0, 0, 0, 0.5);
    margin: auto;
    margin-bottom: 70px;
    padding: 1%;;
}

.soundContainer{
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: 20%;
    height: 171.6px;
    padding: 15px;
    margin: 20px;
    border-color: rgb(246, 240, 240, 0.75);
    border-radius: 20px;
    color: white;
    background-color: rgba(30, 79, 164, 0.5);
    border-style: solid;
}

.vgmBtnContainer{
    margin-top: -5px;
    display: flex;
    justify-content: space-around;
    width: 100%;
}

.prevBtn, .nextBtn{
    width: 9%;
    height: auto;
}
.prevBtn{
    rotate: 180deg;
}

.songNameContainer{
    display: flex;
    justify-content: center;
    border-radius: 20px;
    background-color: black;
    position: relative;
    overflow: hidden;
}


.songNameWrapper {
    white-space: nowrap;
    animation: scrollLeft linear infinite; /* Animation for scrolling */
}

.songName {
    display: inline;
    padding-left: 100%; /* Make text start off-screen */
    color: aqua;
}

/* Keyframes for scrollLeft effect */
@keyframes scrollLeft {
    0% {
        transform: translateX(0%); /* Text starts off-screen */
    }
    100% {
        transform: translateX(-211%); /* Text moves all the way to the left completely out of view */
    }
}

#overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: black;
    z-index: 9999;
    display: none;
  }

  #overlay.visible {
    display: block;
  }

.topContainer{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin-top: 10px;
}

.masterVolumeContainer{
    display: flex;
    flex-wrap: wrap;
}
#masterVolume{
    width: 200px;
}
#muteBtn{
    border-radius: 5px;
    padding: 5px 20px;
    margin-left: 20px;
    background-color: rgba(22, 21, 21, 0.5);
    color: white;
    font-family: "Roboto", sans-serif;
    font-weight: 500;
    font-style: normal;
}

.darkModeBtn {
    position: relative;
    z-index: 10000;
    cursor: pointer;
    width: 50px;
    height: auto;
    margin-top: -10px;
  }

.playContainer{
    display: flex;
    justify-content: center;
    margin: 20px;
}
#playBtn{
    width: 10%;
    height: auto;
    margin-right: 400px;
    margin-left: 430px;
}
.delBtn{
    width: 30px;
    height: 30px;
    margin-top: 70px;
}

/* Adjust media to account for smaller screens */
@media (max-width: 768px) {

    .headerContainer{
        margin-top: 50px;
    }

    .soundContainer {
        width: 40%;
        margin: 10px;
    }

    .headerLarge {
        font-size: 40px;
    }

    #playBtn {
        margin-left: auto;
        margin-right: auto;
        width: 20%;
        height: auto;
    }

    .songNameContainer {
        width: 70%; 
    }
}

